--- a/css/styles.css
+++ b/css/styles.css
@@ -76,6 +76,8 @@ nav picture a {
     display: inline-block;
     transition: background .5s ease-in-out;
     position: relative;
+    padding: 0.5em;
+    border-radius: 3em;
 }
 
 .navbar__link:hover {
@@ -96,6 +98,8 @@ nav picture a {
     width: 220px;
     position: absolute;
     background-color: rgba(90, 59, 122, 0.863);
+    z-index: 3;
+    border-radius: 17px;
 }
 
 .submenu__link {
@@ -103,6 +107,8 @@ nav picture a {
     padding: 1.2rem;
     font-size: medium;
     transition: background .3s ease-in-out;
+    padding: 0.5em;
+    border-radius: 3em;
 }
 
 .submenu__link:hover {
@@ -168,3 +174,44 @@ nav picture a {
     color: #111111;
     transition: background .4s ease-in-out;
 }
+
+/* ======================== BANNER ======================== */
+
+/* ========================= MAIN ========================= */
+
+.contenedor__cartas{
+    background-color: rgb(163, 151, 127);
+}
+
+.seleccionador__cartas {
+    width: 100%;
+    display: flex;
+    max-width: 1100px;
+}
+
+.carta {
+    width: 100%;
+    margin: 20PX;
+    border-radius: 6px;
+    overflow: hidden;
+    background: #fff;
+    box-shadow: 0px 1px 10px rgba(0,0,0,2);
+    cursor: default;
+    transition: all 400ms ease;
+}
+
+.carta:hover {
+    box-shadow: 5px 5px 20px rgba(0,0,0,4);
+    transform: translateY(-3%);
+}
+
+.carta__img {
+    width: 100%;
+    height: 210px;
+}
+
+.carta__content {
+    padding: 15px;
+    text-align: center;
+}
+
